erg: modification du z-index des tooltip erg: affichage de la pancarte bug: gestion des quantites en float pour les perfusions
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@10691 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/tooltips.css
+++ b/style/mediboard/tooltips.css
@@ -8,7 +8,7 @@
 div.tooltip {
   margin-left: 20px;
   position: absolute;
-  z-index: 500;
+  z-index: 600;
   white-space: nowrap;
   background: #fff;
   border: 2px solid #999;
